# robo-news

./: .gitignore  LICENSE  README.md
.github/workflows/: release-linux-amd64.yml
downloader-feed1/: Cargo.toml  README.md
downloader-feed1/.cargo/: config.toml
downloader-feed1/src/: main.rs
illustrator/: Cargo.toml
illustrator/src/: main.rs
parser-feed1/: Cargo.toml
parser-feed1/src/: main.rs
publisher/: Cargo.toml
publisher/src/: main.rs
rewriter/: Cargo.toml
rewriter/src/: main.rs
scraper/: Cargo.toml  README.md
scraper/src/: main.rs
translator/: Cargo.toml
translator/src/: main.rs
