[package]
name = "illustrator"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.38.0", features = ["bundled"] }
anyhow = "1.0.98"
reqwest = { version = "0.11", features = ["blocking", "json", "native-tls-vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.4"
thiserror = "2.0.17"
base64 = "0.22"
