[package]
name = "parser-feed1"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.26", features = ["blocking", "native-tls-vendored"] }
scraper = "0.25.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
anyhow = "1.0.100"
log = "0.4.29"
env_logger = "0.11.8"
sha2 = "0.10.6"
hex = "0.4.3"
chrono = "0.4.42"
