[package]
name = "publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "native-tls-vendored"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10.0"
scraper = "0.17.1"
html5ever = "0.26"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ego-tree = "0.10.0"
